# course-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  env.example  pyproject.toml
LLMs/: api_keys.py
bot/: config.py  main.py  pyproject.toml
bot/conversation/: handler.py  types.py
bot/internal/: claude_client.py  platform.py  slack_service.py
bot/job/: __main__.py  dispatcher.py  worker.py
bot/server/: server.py
bot/slack/: __init__.py  acknowledgers.py  events.py  filters.py  security.py  webhook_handler.py
bot/tests/: test_dispatcher.py  test_slack_service.py  test_webhook_handler.py  test_wiring.py  test_worker.py  test_workspace_manager.py
bot/webhook/: __init__.py  acknowledgers.py  dispatch.py  errors.py  filters.py  types.py
bot/workspace/: manager.py
engine/: CLAUDE.md  pyproject.toml
engine/.claude/skills/pdf-digitalizer/: SKILL.md  validation-checklist.md
engine/.claude/skills/url-digitalizer/: SKILL.md  validation-checklist.md
engine/LLMs/: api_keys.py
engine/LLMs/imagetext2text/: __init__.py  factory.py
engine/LLMs/imagetext2text/pixtral/: __init__.py  client.py
engine/LLMs/text2text/: __init__.py  factory.py  health_check.py
engine/LLMs/text2text/deepseek/: client.py
engine/LLMs/text2text/gemini/: client.py
engine/LLMs/text2text/groq/: client.py
engine/LLMs/text2text/mistral/: client.py
engine/LLMs/text2text/openai/: client.py
engine/agents/activities_generator/: __init__.py  agent.py  prompts.py
engine/agents/base/: __init__.py  parallel_processor.py
engine/agents/bibliography_generator/: __init__.py  __main__.py  agent.py  prompts.py
engine/agents/html_formatter/: __init__.py  agent.py  exporter.py  prompts.py
engine/agents/image_generator/: __init__.py  __main__.py  agent.py  batch_image_generator.py
engine/agents/image_search/: __init__.py  agent.py  prompts.py
engine/agents/index_generator/: agent.py  prompts.py  utils.py
engine/agents/md_digitalizer/: __init__.py  parser.py  restructurer.py  structure_validator.py
engine/agents/mind_map_generator/: __init__.py  agent.py  prompts.py
engine/agents/pdf_index_generator/: __init__.py  agent.py  prompts.py  utils.py
engine/agents/people_search/: __init__.py  agent.py
engine/agents/podcast_generator/: __init__.py  __main__.py  agent.py  prompts.py
engine/agents/section_theory_generator/: agent.py  prompts.py
engine/agents/video_html_generator/: __init__.py  __main__.py  agent.py
engine/agents/video_search/: __init__.py  agent.py  prompts.py
engine/tests/: conftest.py  test_api_keys.py  test_articlesearch_clients.py  test_articlesearch_factory.py  test_audience_profiles.py  test_booksearch_clients.py  test_booksearch_factory.py  test_config.py  test_health_check.py  test_imagesearch_clients.py  test_imagesearch_factory.py  test_index_generator_utils.py  test_json2book_factory.py  test_json2book_utils.py  test_output_manager.py  test_pdf_index_utils.py  test_peoplesearch_clients.py  test_peoplesearch_models.py  test_podcast_factory.py  test_podcast_models.py  test_state_models.py  test_text_llm_factory.py  test_text_preprocessor.py  test_video_html_generator.py  test_videosearch_clients.py  test_videosearch_factory.py  test_vision_llm_factory.py  test_websearch_clients.py  test_websearch_factory.py
engine/tools/: __init__.py
engine/tools/articlesearch/: __init__.py  __main__.py  factory.py
engine/tools/articlesearch/arxiv/: __init__.py  client.py
engine/tools/articlesearch/openalex/: __init__.py  client.py
engine/tools/articlesearch/semanticscholar/: __init__.py  client.py
engine/tools/booksearch/: __init__.py  factory.py
engine/tools/booksearch/googlebooks/: __init__.py  client.py
engine/tools/booksearch/openlibrary/: __init__.py  client.py
engine/tools/imagesearch/: __init__.py  factory.py
engine/tools/imagesearch/bing/: __init__.py  client.py
engine/tools/imagesearch/ddg/: client.py
engine/tools/imagesearch/freepik/: client.py
engine/tools/imagesearch/google/: client.py
engine/tools/json2book/: __init__.py  __main__.py  factory.py  generator.py  utils.py
engine/tools/pdf2md/docling/: __init__.py  converter.py
engine/tools/peoplesearch/: __init__.py  __main__.py  factory.py  models.py  search.py  suggester.py
engine/tools/peoplesearch/wikipedia/: __init__.py  client.py
engine/tools/podcast/: __init__.py  __main__.py  audio_utils.py  base_engine.py  factory.py  models.py  text_preprocessor.py  tts_engine.py
engine/tools/podcast/chatterbox/: __init__.py  client.py
engine/tools/podcast/coqui/: __init__.py  client.py
engine/tools/podcast/edge/: __init__.py  client.py
engine/tools/podcast/elevenlabs/: __init__.py  client.py
engine/tools/podcast/mlx_tts/: __init__.py  client.py
engine/tools/podcast/openai_tts/: __init__.py  client.py
engine/tools/podcast/qwen_tts/: __init__.py  client.py
engine/tools/podcast/qwen_tts_api/: __init__.py  client.py
engine/tools/video_generator/: __init__.py  generator.py
engine/tools/videosearch/: __init__.py  factory.py
engine/tools/videosearch/bing/: __init__.py  client.py
engine/tools/videosearch/youtube/: client.py
engine/tools/web_image_extractor/: __init__.py  __main__.py  extractor.py
engine/tools/web_scraper/: __init__.py  __main__.py  scraper.py
engine/tools/websearch/: __init__.py  factory.py
engine/tools/websearch/ddg/: __init__.py  client.py
engine/tools/websearch/tavily/: client.py
engine/tools/websearch/wikipedia/: client.py
engine/workflows/: audience_profiles.py  output_manager.py  state.py  workflow.py  workflow_book.py  workflow_digitalize.py  workflow_pdf.py  workflow_pdf2podcast.py  workflow_podcast.py
engine/workflows/config/: __init__.py  activities.py  base.py  bibliography.py  html.py  image.py  mindmap.py  people.py  podcast.py  research.py  video.py
engine/workflows/nodes/: __init__.py  content.py  digitalize.py  extras.py  formatting.py  index.py  metadata.py  utils.py
main/: output_manager.py  workflow_digitalize.py
scripts/: deploy.sh  test_tts_engines.py
terraform/: cloud_run.tf  iam.tf  (+5 more)
(+23 files in other folders)
