[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "course-bot"
version = "0.1.0"
description = "Slack bot for AI-powered course generation"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "slack_sdk==3.34.0",
    "claude-agent-sdk==0.1.35",
    "httpx>=0.27.0",
    "google-cloud-run>=0.10.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
